--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ro.gabrielsolomon.mypos_flutter_example">
+    package="ro.gabrielsolomon.mypos_flutter_example"
+    xmlns:tools="http://schemas.android.com/tools">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -8,7 +9,8 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="mypos_flutter_example"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        tools:replace="label">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
