--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: mypos_flutter
 description: Bridge with native MyPos SDK to connect to payment terminals
 version: 0.0.1
 author: Gabriel Solomon <hello@gabrielsolomon.ro>
-homepage:
+homepage: https://github.com/gabrielsolomon/mypos_flutter
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
