--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="ro.gabrielsolomon.mypos_flutter">
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 </manifest>
